--- a/public/css/material/style.css
+++ b/public/css/material/style.css
@@ -1,5 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);
-@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css);
+/*@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);*/
+/*@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css);*/
+
+
 /*!
 
  /** Font Awesome Free 5.0.9 by @fontawesome - https://fontawesome.com*/
@@ -16644,3 +16646,6 @@ pre {
   color: #000;
 }
 
+.bg-grisclaro{
+    background-color: #f8f8f8;
+}
